--- a/app/views/twitter_entities/new.haml
+++ b/app/views/twitter_entities/new.haml
@@ -1,3 +1,3 @@
 = simple_form_for @twitter_entity do |f|
   = f.input :name, label: 'Search Twitter', error: 'Username is mandatory, please specify one'
-  = f.button :submit
+  = f.submit 'Create'
